fix header syntax

--- a/websiter.html
+++ b/websiter.html
@@ -9,7 +9,7 @@
       <div class="container">
         <div class="row centred">
           <div class="col-lg-12">
-            <h1>Ranjith Ramkishore</j1>
+            <h1>Ranjith Ramkishore</h1>
               <h3>Student | Developer |
                 <a href="mailto:ranjith.ramkishore@gmail.com">ranjith.ramkishore@gmail.com</a>
                 </h3>
