--- a/websiter.html
+++ b/websiter.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+   <!-- OPTIONAL: description -->
+   <meta name="description" content="">
+   <!-- OPTIONAL: author -->
+   <meta name="author" content="">
+   <link rel="shortcut icon" href="favicon.ico">
+   <link rel="apple-touch-icon" href="icon.png" />
     <title>TITLE</title>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
+    <!-- Link the main.css stylesheet -->
+    <link href="css/main.css" rel="stylesheet">
+
+    <!-- OPTIONAL: Google Fonts (don't forget to edit main.css also) -->
+    <link href='//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
 
@@ -18,6 +42,171 @@
      </div><!--/.container-->
    </div><!--/.#headerwrap-->
 
+   <section id="about" name="about"></section>
+    <div class="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2 col-lg-offset-1">
+            <h5>ABOUT</h5>
+          </div>
+          <div class="col-lg-6">
+   <p>
+     Hi! I'm currently a student in University of Washington. I love the idea of developing, literally anything.
+     Always ready to learn something new and interesting.
+   </p>
+   </div>
+          <div class="col-lg-3">
+            <p><a href="Resume.pdf"><i class="icon-file"></i> <sm>Download my resume</sm></a></p>
+          </div>
+
+        </div><!--/.row-->
+      </div><!--/.container-->
+    </div><!--/ #intro-->
+
+
+<section id="resume" name="resume"></section>
+	<!-- EDUCATION SECTION -->
+	<div class="container desc">
+		<div class="row">
+
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>EDUCATION</h5>
+				</div>
+				<!-- EDIT: education line 1 -->
+				<div class="col-lg-6">
+					<p><t>Bachelor of Science</t><br/>
+						University of Washington
+						<br/><i>Embedded Systems, Electrical Engineering</i>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>Expected SPRING 2021</sm><br/>
+					<imp><sm>IN PROGRESS</sm></imp>
+					</p>
+				</div>
+
+				<!-- EDIT: education line 2 -->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p><t>Associate of Degrees </t><br/>
+						 Lil 'ol College
+						<!--<br/><i>Extra info here</i>-->
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>JUNE 2012</sm></p>
+				</div>
+
+		</div><!--/.row -->
+		<br>
+		<hr>
+	</div><!--/.container -->
+
+	<!-- WORK SECTION -->
+	<div class="container desc">
+		<div class="row">
+
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>WORK</h5>
+				</div>
+				<!-- EDIT: work line 1 -->
+				<div class="col-lg-6">
+					<p class="tight"><t>Position </t><br/>
+						Thatone Corp. <br/>
+					</p>
+					<p><more>Here's where you put a description of the position you held. Responsibilities, accomplishments - the same as you would do on a standard paper resume, but this will be online and look cooler.</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>AUGUST 2012 - CURRENT <br />
+					CITY, STATE, COUNTRY</sm></p>
+				</div>
+
+				<!-- EDIT: work line 2-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p class="tight"><t>Previous Position</t><br/>
+						Another Organization Ltd. <br/>
+					</p>
+					<p><more>You worked at another job! Great! Describe waht you did there, include those responsibilities and accomplishments again.</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>JUNE 2010 - JULY 2012 <br />
+					GOTHAM CITY, USA</sm></p>
+				</div>
+		</div><!--/.row -->
+		<br>
+		<hr>
+	</div><!--/.container -->
+
+
+	<!-- AWARDS SECTION -->
+	<div class="container desc">
+		<div class="row">
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>Experience</h5>
+				</div>
+
+				<!-- EDIT: awards line 1-->
+				<div class="col-lg-6">
+					<p><t>University of Washington HFS</t><br/>
+						System cash management and service executive<br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>NOVEMBER 2013</sm></p>
+				</div>
+
+				<!-- EDIT: awards line 2-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p class="tight"><t>UW The Daily</t><br/>
+						Daily distribution coordinater and team manager
+					</p>
+					<p><more>This award has a description. You won it eating pie. Or probably doing something more job-related. Maybe you won't even keep this section - you'll replace it with Skills or something else!</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>2013</sm></p>
+				</div>
+
+		</div><!--/.row -->
+		<br>
+	</div><!--/.container -->
+
+  <section id="contact" name="contact"></section>
+	<!--FOOTER DESCRIPTION -->
+	<div id="footwrap" class="footer">
+		<div class="container">
+			<div class="row">
+
+				<div class="col-lg-2 col-lg-offset-1">
+					<h5>CONTACT</h5>
+				</div>
+				<!-- EDIT: email -->
+				<div class="col-lg-6">
+					<p><t>Email</t><br/>
+						<a href="mailto:ranjith.ramkishore@uw.edu" class="mail">ranjith.ramkishore@uw.edu</a> <br/>
+					</p>
+					<!-- EDIT: address -->
+					<p><t>Address</t><br/>
+						4867 Brooklyn Avenue NE <br/>
+						Seattle, WA 98105 <br/>
+						United States of America<br/>
+					</p>
+					<!-- EDIT: phone number -->
+					<p><t>Phone</t><br/>
+						<a href="tel:2065034068" class="tel">(206) 503-4068</a> <br/>
+					</p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>SOCIAL LINKS</sm></p>
+					<p>
+						<!-- EDIT: Social Links. Replace # with your URL for each -->
+						<a href="https://www.facebook.com/ranjith.ramkishore"><i class="icon-twitter"></i></a>
+						<a href="https://twitter.com/ram_ranjith"><i class="icon-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/ranjith-ramkishore-b942aa159/"><i class="icon-linkedin"></i></a>
+						<a href="https://github.com/ranjithr99"><i class="icon-github"></i></a>
+					</p>
+				</div>
+			</div><!--/.row -->
+		</div><!--/.container -->
+	</div><!--/ #footer -->
 
 </body>
 </html>
